Name:                atomic-primops-foreign
Version:             0.6
License:             BSD3
License-file:        LICENSE
Author:              Ryan Newton
Maintainer:          rrnewton@gmail.com
Category:            Data
Build-type:          Simple
Cabal-version:       >=1.8
HomePage: https://github.com/rrnewton/haskell-lockfree/wiki
Bug-Reports: https://github.com/rrnewton/haskell-lockfree/issues

-- 0.6 -- Factored out of parent module to separate dependencies.

Synopsis: An atomic counter implemented using the FFI.
Description:

Library
  exposed-modules: Data.Atomics.Counter.Foreign
  ghc-options: -O2 -funbox-strict-fields
  build-depends: bits-atomic >= 0.1.3

  -- This can go back further than the atomic-primops package in supporting old GHC's:
  -- For now let's say GHC 7.0 through 7.8:
  build-depends: base >= 4.3.0.0 && <= 4.7.0.0
  CC-Options:       -Wall 

Test-Suite test-atomic-primops-foreign
    type:       exitcode-stdio-1.0
    main-is: testing/Main.hs
    hs-source-dirs: testing/ ./

    ghc-options: -threaded -rtsopts -with-rtsopts=-N4
    build-depends: bits-atomic
    build-depends: base >= 4.3.0.0 && <= 4.7.0.0, 
                   -- For Testing:
                   time, HUnit, test-framework, test-framework-hunit

Source-Repository head
    Type:         git
    Location:     git://github.com/rrnewton/haskell-lockfree.git
    Subdir:       atomic-primops-foreign/
