Name:                mega-deque
Version:             0.1
License:             BSD3
License-file:        LICENSE
Author:              Ryan R. Newton
Maintainer:          rrnewton@gmail.com
Category:            Data
Build-type:          Simple
Cabal-version:       >=1.18

Homepage: https://github.com/rrnewton/haskell-lockfree/wiki

Synopsis: Collects together queue packages and selects the right one based on a type family.

Description:

  This module aggregates other queue implementations into a single, parameterizable implementation which

   * single, 1.5, and double-ended queues 
   * bounded / unbounded capacity
   * "safe" or potentially duplicating of elements (e.g. Idempotent Work-stealing)

tested-with: GHC == 8.4.3, GHC == 8.2.2

Library
  exposed-modules:   Data.Concurrent.MegaDeque
  hs-source-dirs:    .
  build-depends:     base >= 4.6 && < 5
                   , abstract-deque >= 0.3
                   , lockfree-queue
                   , chaselev-deque
  default-language: Haskell2010

Test-Suite test-mega-deque
    type:       exitcode-stdio-1.0
    hs-source-dirs: tests
    main-is:    Test.hs
    build-depends:  base >= 4.6 && < 5
                  , containers
                  , abstract-deque >= 0.3
                  , abstract-deque-tests >= 0.3
                  , lockfree-queue
                  , chaselev-deque
                  , HUnit
                  , mega-deque
    ghc-options: -O2 -threaded -rtsopts
    default-language: Haskell2010

Source-Repository head
    Type:         git
    Location:     git://github.com/rrnewton/haskell-lockfree.git
