
-- Trying a completely separate .cabal for testing.

Name:                test-atomic-primops
Version:             0.1.0.0
Build-type:          Simple
Cabal-version:       >=1.8

Flag opt
    Description: Enable GHC optimization.
    Default: True

Flag threaded
    Description: Enable GHC threaded RTS.
    Default: True

Executable test-atomic-primops
    main-is:    Test.hs
    ghc-options: -rtsopts

    if flag(opt)
       ghc-options: -O2 
    if flag(threaded)
       ghc-options: -threaded 
       
    build-depends: base, ghc-prim, primitive, containers, random,
    -- For Testing:
                   atomic-primops,
                   time, HUnit, test-framework, test-framework-hunit
--                   test-framework-th

Test-Suite test-atomic-primops-runner
    type:       exitcode-stdio-1.0
    main-is:    runTest.hs
    build-depends: base, process
