
-- Trying a completely separate .cabal for testing.

Name:                test-atomic-primops
Version:             0.1.0.0
Build-type:          Simple
Cabal-version:       >=1.8

Flag opt
    Description: Enable GHC optimization.
    Default: True

Flag threaded
    Description: Enable GHC threaded RTS.
    Default: True

Test-Suite test-atomic-primops
    type:       exitcode-stdio-1.0
    main-is:    Test.hs
    ghc-options: -rtsopts

    if flag(opt)
       ghc-options: -O2 
    if flag(threaded)
       ghc-options: -threaded 
       
    build-depends: base, ghc-prim, primitive, containers, random,
    -- For Testing:
                   atomic-primops,
                   time, HUnit, test-framework, test-framework-hunit
--                   test-framework-th


Executable hello-world-atomic-primops
  main-is: hello.hs
  build-depends: base >= 4.5, atomic-primops
